@@ -53,6 +53,9 @@
  *   - map_exit.template: template to use for each exit on the map.
  *  - map_lore: template to use to insert the map's lore.
  *  - map_no_lore: template when no lore for the map.
+ *  - map_no_quest.template: when the map is linked to no quest.
+ *  - map_with_quests.template: the map is linked to at least one quest.
+ *   - map_one_quest.template: one quest link.
  * - region.template: region page template.
  *  - region_letter: template for one letter
  *   - region_map.template: one map in a region
@@ -67,6 +70,9 @@
  * - level.template: index of maps by level.
  *  - level_value.template: one level.
  *   - level_map.template: one map in the level.
+ * - quests.template: quest index.
+ *  - quests_quest.template: one quest.
+ *   - quests_map.template: one map in a quest.
  *
  *
  * Tags must be in the form #TAG#. To have a # in the code, please put ##. Valid tags are:
@@ -99,6 +105,14 @@
  *  - MAPLORE: map's lore.
  * - map_no_lore:
  *  - tags for map, except MAPEXIT.
+ * - map_with_quests:
+ *  - tags for map
+ *  - QUESTS: result of map_one_quest processing.
+ *   - map_one_quest:
+ *    - NAME: map's name.
+ *    - PATH: path to the quest page from the index.
+ *    - TEXT: text associated to the map about the quest.
+ * - map_no_quest: not processed.
  * - region:
  *  - MAPCOUNT: count of maps in region.
  *  - LETTERS: text generated by region_letter processing.
@@ -151,7 +165,19 @@
  * - level_map:
  *  - MAPNAME: name of the map.
  *  - MAPPATH: relative path of the map from the index.
- *
+ * - quests:
+ *  - QUESTS: processing of quest.
+ * - quests_quest:
+ *  - QUESTNAME: quest name.
+ *  - QUESTTEXT: quest description.
+ *  - QUESTMAPS: processing of quests_map.
+ *  - QUESTID: unique quest identifier, anchor to index page.
+ *  - MAINMAPPATH: path to the map defining the quest.
+ *  - MAINMAPNAME: name of the map defining the quest.
+ * - quests_map:
+ *  - MAPPATH: path to the map.
+ *  - MAPNAME: map name.
+ *  - MAPTEXT: description associated.
  *
  * To build this program, from the utils directory:
  *  gcc mapper.c -I../include ../common/libcross.a -o mapper -lm -lgd
@@ -172,12 +198,21 @@
 gdImagePtr* gdfaces;
 extern int nrofpixmaps; /* Found in common/image.c */
 
+/** Utility structure to group map-quest link structure. */
+typedef struct {
+    struct struct_map_in_quest** list;
+    int count;
+    int allocated;
+} struct_map_in_quest_list;
+
+/** List of maps. */
 typedef struct {
     struct struct_map_info** maps;
     int count;
     int allocated;
 } struct_map_list;
 
+/** Map information. */
 typedef struct struct_map_info {
     char* path;
     char* name;
@@ -187,6 +222,7 @@ typedef struct struct_map_info {
     int level;
     struct_map_list exits_from;
     struct_map_list exits_to;
+    struct_map_in_quest_list quests;
 } struct_map_info;
 
 /** Maps to process or found. */
@@ -235,6 +271,14 @@ char* index_region_region_template; /**< One region in the region index template
 char* level_template;
 char* level_value_template;
 char* level_map_template;
+
+char* index_quest_template;
+char* quest_template;
+char* quest_map_template;
+
+char* map_no_quest_template;
+char* map_with_quests_template;
+char* map_one_quest_template;
 
 /** Picture statistics. */
 int created_pics = 0; /**< Total created pics. */
@@ -711,6 +755,256 @@ static int sort_region( const void* left, const void* right )
     return strcmp((*((struct_region_info**)left))->reg->name, (*((struct_region_info**)right))->reg->name);
 }
 
+/************************************
+ Start of quest-related definitions.
+************************************/
+
+/** Link between a quest and a map. */
+typedef struct struct_map_in_quest {
+    struct_map_info* map;   /**< Linked map. */
+    char* description;      /**< Description associated with the map for the quest. */
+    struct struct_quest* quest;    /**< Point back to the quest. */
+} struct_map_in_quest;
+
+/** One quest. */
+typedef struct struct_quest {
+    char* name;                     /**< Quest's name. */
+    char* description;              /**< Description, from the main map's lore. */
+    int number;                     /**< Unique quest identifier. */
+    struct_map_info* mainmap;       /**< Map defining the quest. Can be NULL if quest has no definition or map not processed. */
+    struct_map_in_quest_list maps;  /**< Maps part of this quest. */
+} struct_quest;
+
+struct_quest** quests = NULL;   /**< All quests in the game. */
+int quests_count = 0;           /**< Count of quests. */
+int quests_allocated = 0;       /**< Allocated items in quests. */
+
+static void init_struct_map_in_quest_list(struct_map_in_quest_list* list) {
+    list->list = NULL;
+    list->count = 0;
+    list->allocated = 0;
+}
+
+static void add_to_struct_map_in_quest_list(struct_map_in_quest_list* list, struct_map_in_quest* item) {
+    if (list->count == list->allocated) {
+        list->allocated += 10;
+        list->list = realloc(list->list, sizeof(struct_map_in_quest*) * list->allocated);
+    }
+    list->list[list->count++] = item;
+}
+
+/**
+ * Gets the information for a quest, create the field if needed.
+ *
+ * @param name
+ * quest's name.
+ * @return
+ * information, never NULL.
+ */
+static struct_quest* get_quest_info(const char* name) {
+    int test;
+    struct_quest* add;
+
+    for (test = 0; test < quests_count; test++) {
+        if (strcmp(quests[test]->name, name) == 0)
+            return quests[test];
+    }
+
+    if (quests_count == quests_allocated) {
+        quests_allocated += 10;
+        quests = realloc(quests, sizeof(struct_quest*) * quests_allocated);
+    }
+    add = calloc(1, sizeof(struct_quest));
+    add->name = strdup(name);
+    add->number = quests_count;
+    init_struct_map_in_quest_list(&add->maps);
+    quests[quests_count] = add;
+    quests_count++;
+    return add;
+}
+
+/**
+ * Links a map to a quest.
+ *
+ * @param map
+ * map to link.
+ * @param name
+ * quest name.
+ * @param description
+ * associated link description. Must not be NULL.
+ */
+static void add_map_to_quest(struct_map_info* map, const char* name, const char* description) {
+    struct_map_in_quest* add;
+    struct_quest* quest = get_quest_info(name);
+
+    add = calloc(1, sizeof(struct_map_in_quest));
+    add->map = map;
+    add->quest = quest;
+    add->description = strdup(description);
+    add_to_struct_map_in_quest_list(&quest->maps, add);
+    add_to_struct_map_in_quest_list(&map->quests, add);
+}
+
+/**
+ * Sets the main map for a quest.
+ *
+ * @param name
+ * quest name.
+ * @param mainmap
+ * main map to associate.
+ * @param description
+ * quest description. Must not be NULL.
+ */
+static void define_quest(const char* name, struct_map_info* mainmap, const char* description) {
+    struct_quest* quest = get_quest_info(name);
+    if (quest->description || quest->mainmap) {
+        printf("warning, multiple quest definition for %s, found in %s and %s.\n", quest->name, quest->mainmap ? quest->mainmap->path : "(unknown map)", mainmap->path);
+        return;
+    }
+    quest->description = strdup(description);
+    quest->mainmap = mainmap;
+}
+
+/**
+ * Extracts from the map's lore quest information if found. May modify map->lore.
+ *
+ * @param map
+ * map to process.
+ */
+void process_map_lore(struct_map_info* map) {
+    char* start, *end, *next;
+    char name[500];
+    char description[500];
+
+    start = strstr(map->lore, "@def");
+    while (start) {
+        description[0] = '\0';
+        /* find name */
+        end = strstr(start, "\n");
+        if (end) {
+            strncpy(name, start + 5, end - start - 5);
+            name[end - start - 5] = '\0';
+            next = end + 1;
+            end = strstr(next, "@end");
+            if (end) {
+                strncpy(description, next, end - next);
+                description[end - next] = '\0';
+                /* need to erase the text. */
+                memcpy(start, end + 4, strlen(map->lore) - (end - start + 3));
+                end = start;
+            }
+            else {
+                strcpy(description, next);
+                *start = '\0';
+                end = NULL;
+            }
+        } else {
+            strcpy(name, start);
+            *start = '\0';
+            end = NULL;
+        }
+
+        define_quest(name, map, description);
+        start = end ? strstr(end, "@def") : NULL;
+    }
+
+    start = strstr(map->lore, "@quest");
+    while (start) {
+        description[0] = '\0';
+        /* find name */
+        end = strstr(start, "\n");
+        if (end) {
+            strncpy(name, start + 7, end - start - 7);
+            name[end - start - 7] = '\0';
+            next = end + 1;
+            end = strstr(next, "@end");
+            if (end) {
+                strncpy(description, next, end - next);
+                description[end - next] = '\0';
+                /* need to erase the text. */
+                memcpy(start, end + 4, strlen(map->lore) - (end - start + 3));
+                end = start;
+            }
+            else {
+                strcpy(description, next);
+                *start = '\0';
+                end = NULL;
+            }
+        } else {
+            strcpy(name, start);
+            *start = '\0';
+            end = NULL;
+        }
+
+        add_map_to_quest(map, name, description);
+        start = end ? strstr(end, "@quest") : NULL;
+    }
+}
+
+/**
+ * Writes the global quests page.
+ */
+static void write_quests_page() {
+    int quest, map;
+    FILE* out;
+    char path[500];
+    char mappath[500];
+    char mainmappath[500];
+    char questid[500];
+    const char* map_vars[] = { "MAPPATH", "MAPNAME", "MAPTEXT", NULL };
+    const char* map_vals[] = { mappath, NULL, NULL, NULL };
+    const char* quest_vars[] = { "QUESTNAME", "QUESTTEXT", "QUESTMAPS", "QUESTID", "MAINMAPPATH", "MAINMAPNAME", NULL };
+    const char* quest_vals[] = { NULL, NULL, NULL, questid, mainmappath, NULL, NULL };
+    const char* idx_vars[] = { "QUESTS", NULL };
+    const char* idx_vals[] = { NULL, NULL };
+    char* text_map = NULL;
+    char* text_quest = NULL;
+    char* text_idx = NULL;
+
+    printf("Writing quest index...");
+
+    for (quest = 0; quest < quests_count; quest++) {
+        for (map = 0; map < quests[quest]->maps.count; map++) {
+            snprintf(mappath, sizeof(mappath), "%s.html", quests[quest]->maps.list[map]->map->path + 1);
+            map_vals[1] = quests[quest]->maps.list[map]->map->name;
+            map_vals[2] = quests[quest]->maps.list[map]->description ? quests[quest]->maps.list[map]->description : "(no description)";
+            text_map = cat_template(text_map, do_template(quest_map_template, map_vars, map_vals));
+        }
+
+        quest_vals[0] = quests[quest]->name;
+        quest_vals[1] = quests[quest]->description ? quests[quest]->description : "(main map not processed)";
+        quest_vals[2] = text_map;
+        snprintf(questid, sizeof(questid), "quest_%d", quests[quest]->number);
+        if (quests[quest]->mainmap) {
+            snprintf(mainmappath, sizeof(mainmappath), "%s.html", quests[quest]->mainmap->path + 1);
+            quest_vals[5] = quests[quest]->mainmap->name;
+        }
+        else {
+            snprintf(mainmappath, sizeof(mainmappath), "#");
+            quest_vals[5] = "";
+        }
+        text_quest = cat_template(text_quest, do_template(quest_template, quest_vars, quest_vals));
+        free(text_map);
+        text_map = NULL;
+    }
+
+    idx_vals[0] = text_quest;
+    text_idx = do_template(index_quest_template, idx_vars, idx_vals);
+    free(text_quest);
+
+    snprintf(path, sizeof(path), "%s/quests.html", root);
+    out = fopen(path, "w+");
+    fprintf(out, text_idx);
+    fclose(out);
+    free(text_idx);
+
+    printf(" done.\n");
+}
+
+/************************************
+ End of quest-related definitions.
+************************************/
+
 /**
  * Adds a map to specified array, if it isn't already.
  *
@@ -765,6 +1059,7 @@ struct_map_info* get_map_info(const char* path) {
 
     init_map_list(&add->exits_to);
     init_map_list(&add->exits_from);
+    init_struct_map_in_quest_list(&add->quests);
     add_map(add, &maps_list);
     return add;
 }
@@ -1019,8 +1314,10 @@ void process_map(struct_map_info* info)
         do_auto_apply(m);
 
     info->level = m->difficulty;
-    if (m->maplore)
+    if (m->maplore) {
         info->lore = strdup(m->maplore);
+        process_map_lore(info);
+    }
 
     if (m->name)
         info->name = strdup(m->name);
@@ -1580,6 +1877,7 @@ void write_map_page(struct_map_info* map) {
     char* exits_to;
     char* maplore;
     char* tmp;
+    char* quests, *quest;
 
     char htmlpath[500];         /* Map file path. */
     char mappic[500];           /* Name of map's full size picture. */
@@ -1592,9 +1890,15 @@ void write_map_page(struct_map_info* map) {
     char exit_path[500];
     char maplevel[5];
     FILE* out;
+    char questpath[500];
 
-    const char* vars[] = { "NAME", "MAPPATH", "MAPNAME", "MAPPIC", "MAPSMALLPIC", "MAPEXITFROM", "INDEXPATH", "REGIONPATH", "REGIONNAME", "REGIONINDEXPATH", "WORLDMAPPATH", "MAPLORE", "MAPEXITTO", "MAPLEVEL", NULL, NULL, NULL };
-    const char* values[] = { map->path, htmlpath, map->name, mappic, mapsmallpic, "", indexpath, regionpath, regionname, regionindexpath, worldmappath, "", "", maplevel, NULL, NULL, NULL };
+    const char* quest_vars[] = { "NAME", "PATH", "TEXT", NULL };
+    const char* quest_vals[] = { NULL, questpath, NULL, NULL };
+    const char* q_vars[] = { "QUESTS", NULL };
+    const char* q_vals[] = { NULL, NULL };
+
+    const char* vars[] = { "NAME", "MAPPATH", "MAPNAME", "MAPPIC", "MAPSMALLPIC", "MAPEXITFROM", "INDEXPATH", "REGIONPATH", "REGIONNAME", "REGIONINDEXPATH", "WORLDMAPPATH", "MAPLORE", "MAPEXITTO", "MAPLEVEL", "QUESTS", NULL, NULL, NULL };
+    const char* values[] = { map->path, htmlpath, map->name, mappic, mapsmallpic, "", indexpath, regionpath, regionname, regionindexpath, worldmappath, "", "", maplevel, NULL, NULL, NULL, NULL };
     int vars_count = 0;
 
     while (vars[vars_count])
@@ -1622,9 +1926,10 @@ void write_map_page(struct_map_info* map) {
     snprintf(htmlpath, sizeof(htmlpath), "%s%s.html", root, map->path);
     make_path_to_file(htmlpath);
 
+    values[14] = "";
 
     snprintf(maplevel, sizeof(maplevel), "%d", map->level);
-    if (map->lore) {
+    if (map->lore && map->lore[0] != '\0') {
         values[11] = map->lore;
         maplore = do_template(map_lore_template, vars, values);
     }
@@ -1691,6 +1996,25 @@ void write_map_page(struct_map_info* map) {
 
     values[12] = exits_to;
 
+    if (map->quests.count) {
+        int q;
+        quest = NULL;
+        for (q = 0; q < map->quests.count; q++) {
+            quest_vals[0] = map->quests.list[q]->quest->name;
+            relative_path(map->path, "/quests.html", questpath);
+            quest_vals[2] = map->quests.list[q]->description;
+            quest = cat_template(quest, do_template(map_one_quest_template, quest_vars, quest_vals));
+        }
+
+        q_vals[0] = quest;
+        quests = do_template(map_with_quests_template, q_vars, q_vals);
+        free(quest);
+        quest = NULL;
+    }
+    else
+        quests = strdup(map_no_quest_template);
+    values[14] = quests;
+
     vars[vars_count] = NULL;
     out = fopen(htmlpath, "w+");
     tmp = do_template(map_template, vars, values);
@@ -1700,6 +2024,7 @@ void write_map_page(struct_map_info* map) {
     free(exits_text);
     free(exits_to);
     free(maplore);
+    free(quests);
 }
 
 /** Ensures all maps have a name, and writes all map pages. */
@@ -2198,6 +2523,14 @@ int main(int argc, char** argv)
     read_template("templates/level_value.template", &level_value_template);
     read_template("templates/level_map.template", &level_map_template);
 
+    read_template("templates/quests.template", &index_quest_template);
+    read_template("templates/quests_quest.template", &quest_template);
+    read_template("templates/quests_map.template", &quest_map_template);
+
+    read_template("templates/map_with_quests.template", &map_with_quests_template);
+    read_template("templates/map_one_quest.template", &map_one_quest_template);
+    read_template("templates/map_no_quest.template", &map_no_quest_template);
+
     if (map_limit != -1)
         sprintf(max, "%d", map_limit);
     else
@@ -2271,6 +2604,8 @@ int main(int argc, char** argv)
 
     write_regions_link();
     write_slaying_info();
+
+    write_quests_page();
 
     return 0;
 }
