@@ -1,0 +1,3 @@
+<p>This map is part of the following quests:</p>
+<ul>#QUESTS#
+</ul>
