@@ -1,0 +1,9 @@
+<html>
+<head>
+<title>Quests</title>
+</head>
+<body>
+<h1>Quests</h1>
+
+#QUESTS#
+</body>
