@@ -1,0 +1,1 @@
+<li><a href="#MAPPATH#">#MAPNAME#</a> (#MAPTEXT#)</li>
