@@ -1,0 +1,8 @@
+<h2>#QUESTNAME#</h2>
+<a name="#QUESTID#" />
+<p>#QUESTTEXT#</p>
+<p>Start in <a href="#MAINMAPPATH#">#MAINMAPNAME#</a>.</p>
+Maps:
+<ul>
+#QUESTMAPS#
+</ul>
